# news-track

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  DEDUPLICATION.md  Dockerfile  QWEN.md  README.md  conftest.py  diagnostics.py  docker-compose.debug.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_docker_logs.py
.trae/rules/: project_rules.md
app/: __init__.py  config.py  main.py
app/collectors/: browser_search.py  google_search.py  huatu.py  rss.py  websearch.py
app/db/: README.md  __init__.py  database.py  models.py  services.py
app/models/: __init__.py
app/notifiers/: email.py
app/processors/: llm.py
app/utils/: __init__.py  deduplication.py
data/: news_tracker.db
scripts/: query_db.py
tests/: test_config.py  test_db.py  test_deduplication.py  test_email_notifier.py  test_google_search_collector.py  test_huatu_collector.py  test_llm_processor.py  test_main_flow.py  test_main_integration.py  test_models.py  test_rss_collector.py  test_scheduler.py  test_websearch_collector.py
